--- a/templates/home.html
+++ b/templates/home.html
@@ -3,10 +3,18 @@
 		<title>Noticias</title>
 	</head>
 	<body>
-		<h1>Noticias</h1>
+		<h1>Ultimas Noticias</h1>
+		<h2>Clima Actual</h2>
 		<form>
-			<input type="text" name="publication" placeholder="search" />
-			<input type="submit" value="submit" />
+			<input type="text" name="city" placeholder="buscar clima" />
+			<input type="submit" value="Buscar" />
+			<p>Ciudad: <b>{{ weather.city }}, {{ weather.country }}</b></p>
+		<p>Temperatura: {{ weather.temperature }} F</p>
+		<p>Descripci&oacute;n: {{ weather.description }}</p>
+		<h2>Buscar noticias</h2>
+		<form>
+			<input type="text" name="publication" placeholder="buscar noticias" />
+			<input type="submit" value="Buscar" />
 		</form>
 		{% for article in articles %}
 		<b><a href="{{ article.link }}">{{ article.title }}</a></b><br/>
