--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,56 @@
 <html>
 	<head>
 		<title>Noticias</title>
+		<style>
+		html {
+			font-family: "Sans";
+			background: white;
+		}
+
+		body {
+			background: lightgrey;
+				max-width: 900px;
+				margin: 0 auto;
+		}
+
+		#header {
+			padding-top: 5;
+			background: lightsteelblue;
+		}
+		#inner-header {
+			padding-left: 10;
+		}
+		#main {
+			padding-left: 10;
+		}
+		input[type="text"], select {
+			color: grey;
+			border: 1px solid lightsteelblue;
+			height: 30px;
+			line-height: 15px;
+			margin: 2px 6px 16px 0px;
+		}
+		input[type="submit"] {
+			padding: 5px 10px 5px 10px;
+			color: black;
+			background: lightsteelblue;
+			border: none;
+			box-shadow: 1px 1px 1px #4c6e91;
+		}
+		input[type="submit"]:hover {
+			background: steelblue;
+		}
+		</style>
 	</head>
 	<body>
-		<h1>Ultimas Noticias</h1>
+		<div id="header">
+			<div id="inner-header">
+				<h1>Ultimas Noticias</h1>
+				<p>Noticias. Clima. Moneda</p>
+			</div>
+			<hr/>
+		</div>
+		<div id="main">
 		<h2>Clima Actual</h2>
 		<form>
 			<input type="text" name="city" placeholder="buscar clima" />
@@ -38,6 +85,7 @@
 		<p>{{ article.summary }}</p>
 		<hr/>
 		{% endfor %}
+		</div>
 	</body>
 </html>
 
